tests-ast-compare/fixtures/babel/packages/babel-parser/test/fixtures/esprima/invalid-syntax/migrated_0210/input.js
function hello() {'use strict'; ({ set s(eval) { } }); }
